--- a/.gbp.conf
+++ b/.gbp.conf
@@ -1,7 +1,7 @@
 # Configuration file for git-buildpackage and friends
 
 [DEFAULT]
-debian-branch = apt-dht
+debian-branch = apt-p2p
 debian-tag = %(version)s
 
 [git-buildpackage]
