--- a/apt-dht.conf
+++ b/apt-dht.conf
@@ -1,4 +1,4 @@
-# The apt-dht configuration file.
+# The apt-p2p configuration file.
 #
 # This is an ini-type configuration file, using sections identified by
 # square brackets. Values are specified on a single line using the '='
@@ -19,7 +19,7 @@
 PORT = 9977
     
 # Directory to store the downloaded files in
-CACHE_DIR = /var/cache/apt-dht
+CACHE_DIR = /var/cache/apt-p2p
     
 # Other directories containing packages to share with others
 # WARNING: all files in these directories will be hashed and available
@@ -42,14 +42,14 @@ KEY_REFRESH = 57m
 # It must be possile to do "from <DHT>.DHT import DHT" to get a class that
 # implements the IDHT interface. There should also be a similarly named
 # section below to specify the options for the DHT.
-DHT = apt_dht_Khashmir
+DHT = apt_p2p_Khashmir
 
 # Whether to only run the DHT (for providing only a bootstrap node)
 DHT-ONLY = no
 
-#######################  apt_dht_Khashmir  ############################
+#######################  apt_p2p_Khashmir  ############################
 # This is the default (included) DHT to use.
-[apt_dht_Khashmir]
+[apt_p2p_Khashmir]
 
 # To specify a different (UDP) port for the DHT to use.
 # If not specified here, the PORT value in the DEFAULT section will be used.
