--- a/docs/epydoc.config
+++ b/docs/epydoc.config
@@ -3,7 +3,7 @@
 # The list of objects to document.  Objects can be named using
 # dotted names, module filenames, or package directory names.
 # Alases for this option include "objects" and "values".
-modules: apt_dht apt_dht_Khashmir test.py
+modules: apt_p2p apt_p2p_Khashmir test.py
 
 # The type of output that should be generated.  Should be one
 # of: html, text, latex, dvi, ps, pdf.
@@ -73,14 +73,14 @@ include-log: yes
 ### Output options
 
 # The documented project's name.
-name: Apt-DHT
+name: Apt-P2P
 
 # The CSS stylesheet for HTML output.  Can be the name of a builtin
 # stylesheet, or the name of a file.
 css: white
 
 # The documented project's URL.
-url: http://www.camrdale.org/apt-dht.html
+url: http://www.camrdale.org/apt-p2p.html
 
 # HTML code for the project link in the navigation bar.  If left
 # unspecified, the project link will be generated based on the
