--- a/apt-p2p.conf
+++ b/apt-p2p.conf
@@ -17,7 +17,11 @@
 # for uploads to other peers. If a port is not specified for the DHT, it will also
 # use this UDP port to listen for DHT requests.
 PORT = 9977
-    
+
+# The rate to limit sending data to peers to, in KBytes/sec.
+# Set this to 0 to not limit the upload bandwidth.
+UPLOAD_LIMIT = 0
+
 # Directory to store the downloaded files in
 CACHE_DIR = /var/cache/apt-p2p
     
@@ -26,7 +30,7 @@ CACHE_DIR = /var/cache/apt-p2p
 #          for everybody to download
 # OTHER_DIRS = 
     
-# Whether it's OK to use an IP addres from a known local/private range
+# Whether it's OK to use an IP address from a known local/private range
 LOCAL_OK = no
 
 # Unload the packages cache after an interval of inactivity this long.
@@ -39,7 +43,7 @@ UNLOAD_PACKAGES_CACHE = 5m
 KEY_REFRESH = 57m
 
 # Which DHT implementation to use.
-# It must be possile to do "from <DHT>.DHT import DHT" to get a class that
+# It must be possible to do "from <DHT>.DHT import DHT" to get a class that
 # implements the IDHT interface. There should also be a similarly named
 # section below to specify the options for the DHT.
 DHT = apt_p2p_Khashmir
