--- a/apt-p2p.conf
+++ b/apt-p2p.conf
@@ -39,6 +39,9 @@ CACHE_DIR = /var/cache/apt-p2p
 # Whether it's OK to use an IP address from a known local/private range
 LOCAL_OK = no
 
+# Whether a remote peer can access the statistics page
+REMOTE_STATS = yes
+
 # Unload the packages cache after an interval of inactivity this long.
 # The packages cache uses a lot of memory, and only takes a few seconds
 # to reload when a new request arrives.
