Switch the user name on startup.

--- a/apt-p2p.conf
+++ b/apt-p2p.conf
@@ -51,6 +51,9 @@ UNLOAD_PACKAGES_CACHE = 5m
 # This should be a time slightly less than the DHT's KEY_EXPIRE value.
 KEY_REFRESH = 57m
 
+# The user name to try and run as (leave blank to run as current user)
+USERNAME = apt-p2p
+
 # Which DHT implementation to use.
 # It must be possible to do "from <DHT>.DHT import DHT" to get a class that
 # implements the IDHT interface. There should also be a similarly named
@@ -70,6 +73,7 @@ DHT-ONLY = no
 
 # bootstrap nodes to contact to join the DHT
 BOOTSTRAP = www.camrdale.org:9977
+            www.camrdale.org:9976
             steveholt.hopto.org:9976
 
 # whether this node is a bootstrap node
