Update the config file for the change in default key expiry length.

--- a/apt-p2p.conf
+++ b/apt-p2p.conf
@@ -49,7 +49,7 @@ UNLOAD_PACKAGES_CACHE = 5m
 
 # Refresh the DHT keys after this much time has passed.
 # This should be a time slightly less than the DHT's KEY_EXPIRE value.
-KEY_REFRESH = 57m
+KEY_REFRESH = 2.5h
 
 # The user name to try and run as (leave blank to run as current user)
 USERNAME = apt-p2p
@@ -106,7 +106,7 @@ MIN_PING_INTERVAL = 15m
 BUCKET_STALENESS = 1h
 
 # expire unrefreshed entries older than this
-KEY_EXPIRE = 1h
+KEY_EXPIRE = 3h
 
 # Timeout KRPC requests to nodes after this time.
 KRPC_TIMEOUT = 14s
