Fix some documentation errors.

--- a/docs/epydoc.config
+++ b/docs/epydoc.config
@@ -3,7 +3,7 @@
 # The list of objects to document.  Objects can be named using
 # dotted names, module filenames, or package directory names.
 # Alases for this option include "objects" and "values".
-modules: apt_p2p apt_p2p_Khashmir test.py
+modules: apt_p2p apt_p2p_Khashmir apt-p2p.py test.py
 
 # The type of output that should be generated.  Should be one
 # of: html, text, latex, dvi, ps, pdf.
