Don't add local IP addresses to the routing table (with config option to override).

--- a/apt-p2p.conf
+++ b/apt-p2p.conf
@@ -105,6 +105,11 @@ MIN_PING_INTERVAL = 15m
 # refresh buckets that haven't been touched in this long
 BUCKET_STALENESS = 1h
 
+# Whether it's OK to add nodes to the routing table that use an IP
+# address from a known local/private range.
+# If not specified here, the LOCAL_OK value in the DEFAULT section will be used.
+# LOCAL_OK = no
+
 # expire unrefreshed entries older than this
 KEY_EXPIRE = 3h
 
