First submission of debaday article.

--- a/docs/epydoc.config
+++ b/docs/epydoc.config
@@ -80,7 +80,7 @@ name: Apt-P2P
 css: white
 
 # The documented project's URL.
-url: http://www.camrdale.org/apt-p2p.html
+url: http://www.camrdale.org/apt-p2p/
 
 # HTML code for the project link in the navigation bar.  If left
 # unspecified, the project link will be generated based on the
