Fix various documentation issues (Closes: #518590, #518549, #518548, 518550)

--- a/apt-p2p.conf
+++ b/apt-p2p.conf
@@ -36,7 +36,10 @@ CACHE_DIR = /var/cache/apt-p2p
 #          for everybody to download
 # OTHER_DIRS = 
     
-# Whether it's OK to use an IP address from a known local/private range
+# Whether it's OK for the application to use for sharing files an IP
+# address from a known local or private range (RFC 1918). This should
+# only be set true if you are running your own private apt-p2p network
+# that no one else will be connecting to.
 LOCAL_OK = no
 
 # Whether a remote peer can access the statistics page
@@ -106,7 +109,9 @@ MIN_PING_INTERVAL = 15m
 BUCKET_STALENESS = 1h
 
 # Whether it's OK to add nodes to the routing table that use an IP
-# address from a known local/private range.
+# address from a known local or private range (RFC 1918). This should
+# only be set true if you are running your own private apt-p2p network
+# that no one else will be connecting to.
 # If not specified here, the LOCAL_OK value in the DEFAULT section will be used.
 # LOCAL_OK = no
 
