--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: apt-p2p
 Section: net
 Priority: optional
 Maintainer: Cameron Dale <camrdale@gmail.com>
-Homepage: http://www.camrdale.org/apt-p2p.html
+Homepage: http://www.camrdale.org/apt-p2p/
 Standards-Version: 3.8.4
 Build-Depends: debhelper (>= 5.0.37.2)
 Build-Depends-Indep: python, python-support (>= 0.5.4), docbook-to-man
